--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -14,7 +14,10 @@
         "campaignComparator": "Campaign comparator",
         "settings": "Settings",
         "manager": "Manage",
-        "activityRegister": "Activity Register"
+        "activityRegister": "Activity Register",
+        "sidebarError1": "An error occurred when consulting the",
+        "sidebarError2": "countries or retailers",
+        "sidebarError3": "to which you have access. Please try later."
     },
     "filters": {
         "country": "Country",
@@ -62,6 +65,14 @@
         "investment": "investment",
         "transactions": "transactions"
     },
+    "paginator": {
+        "itemsPerPage": "Items per page",
+        "nextPage": "Next page",
+        "previousPage": "Previous page",
+        "firstPage": "First page",
+        "lastPage": "Last page",
+        "ofCounter": "of"
+    },
     "general": {
         "coop": "COOP Program",
         "sector": "Sector",
@@ -77,7 +88,8 @@
         "others": "Others",
         "errorData": "Error getting data",
         "withoutData": "No data available",
-        "withoutData2": "Insufficient sample"
+        "withoutData2": "Insufficient sample",
+        "withoutData3": "No data found"
     },
     "others": {
         "by": "by",
