update comparative charts in overview components (#176)
* update omnichat-wrapper component

* update overview-wrapper component

* update overview-wrapper component

* update i18n files

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -97,6 +97,9 @@
         "amount": "Amount",
         "institutional": "Institutional",
         "others": "Others",
+        "usersVsSales": "Users vs Sales",
+        "investmentVsRevenue": "Investment vs Revenue",
+        "revenueVsAup": "Revenue vs AUP",
         "errorData": "Error getting data",
         "withoutData": "No data available",
         "withoutData2": "Insufficient sample",
