--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -98,6 +98,9 @@
         "amount": "Catindad",
         "institutional": "Institucional",
         "others": "Otros",
+        "usersVsSales": "Usuarios vs Ventas",
+        "investmentVsRevenue": "Inversión vs Revenue",
+        "revenueVsAup": "Revenue vs AUP",
         "errorData": "Error al consultar datos",
         "withoutData": "Sin datos disponibles",
         "withoutData2": "Muestra insuficiente",
