--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -97,6 +97,9 @@
         "amount": "Quantidade",
         "institutional": "Institucional",
         "others": "Outros",
+        "usersVsSales": "Usuários vs Vendas",
+        "investmentVsRevenue": "Investimento vs Revenue",
+        "revenueVsAup": "Revenue vs AUP",
         "errorData": "Erro ao consultar dados",
         "withoutData": "Nenhum dado disponível",
         "withoutData2": "Amostra insuficiente",
