--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -67,14 +67,14 @@
         "chart3CardTitle1": " por Género",
         "chart4CardTitle1": " por Edad",
         "chart5CardTitle1": " por Género y Edad",
-        "chart7CardTitle1": "Inversión vs Revenue",
+        "chart7CardTitle1": "Inversión - Revenue",
         "chart7ValueName1": "Inversión",
         "chart7ValueName2": "Revenue",
         "table1CardTitle1": "Top Productos"
     },
     "kpis": {
         "investment": "inversión",
-        "transactions": "transacciones"
+        "transactions": "conversiones"
     },
     "paginator": {
         "itemsPerPage": "Registros por página",
@@ -91,7 +91,7 @@
         "source": "Fuente",
         "campaign": "Campaña",
         "traffic": "Tráfico",
-        "sales": "Ventas",
+        "sales": "Conversiones",
         "users": "Usuarios",
         "ranking": "Ranking",
         "product": "Producto",
