--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -34,28 +34,36 @@
         "country": "País",
         "countryPh": "Selecciona un País",
         "countrySearchPh": "Buscar País",
+        "countryEmptyMsg": "No se encontraron Países",
         "countryError1": "Error al consultar países",
         "retailerPh": "Selecciona un Retailer",
         "retailerSearchPh": "Buscar Retailer",
+        "retailerEmptyMsg": "No se encontraron Retailers",
         "retailerError1": "Selecciona al menos un Retailer",
         "retailerError2": "Error al consultar Retailers",
+        "retailerError3": "Selecciona un Retailer",
         "period": "Período",
         "periodPh1": "Fecha inicio",
         "periodPh2": "Fecha fin",
         "periodError1": "Fecha inicio inválida",
         "periodError2": "Fecha fin inválida",
         "sectorPh": "Selecciona un Sector",
+        "sectorEmptyMsg": "No se encontraron Sectores",
         "sectorError1": "Selecciona al menos un Sector",
         "sectorError2": "Error al consultar sectores",
         "categoryPh": "Selecciona una Categoría",
+        "categoryEmptyMsg": "No se encontraron Categorías",
         "categoryError1": "Selecciona al menos una Categoría",
         "categoryError2": "Error al consultar categorías",
         "campaignPh": "Selecciona una Campaña",
         "campaignSearchPh": "Buscar Campaña",
+        "campaignEmptyMsg": "No se encontraron Campañas",
         "campaignError1": "No existen campañas para el Periodo, Sectores y Categorías seleccionados",
         "campaignError2": "Error al consultar campañas",
+        "campaignError3": "Selecciona una Campaña",
         "sourcePh": "Selecciona una Fuente",
         "sourceError1": "Selecciona al menos una Fuente",
+        "genericEmptyMsg": "No se encontraron resultados",
         "filter": "Filtrar"
     },
     "overviewLatam": {
