--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -34,28 +34,36 @@
         "country": "País",
         "countryPh": "Selecione um Pais",
         "countrySearchPh": "Procure um país",
+        "countryEmptyMsg": "Nenhum país encontrado",
         "countryError1": "Erro ao consultar países",
         "retailerPh": "Selecione um Retailer",
         "retailerSearchPh": "Procure um Retailer",
+        "retailerEmptyMsg": "Nenhum Retailer encontrado",
         "retailerError1": "Selecione pelo menos um Retailer",
         "retailerError2": "Erro ao consultar Retailers",
+        "retailerError3": "Selecione um Retailer",
         "period": "Período",
         "periodPh1": "Data de início",
         "periodPh2": "Data de término",
         "periodError1": "Data de início inválida",
         "periodError2": "Data de término inválida",
         "sectorPh": "Selecione um Setor",
+        "sectorEmptyMsg": "Nenhum Setor encontrado",
         "sectorError1": "Selecione pelo menos um Setor",
         "sectorError2": "Erro ao consultar setores",
-        "categoryPh": "Selecione uma Categoría",
+        "categoryPh": "Selecione uma Categoria",
+        "categoryEmptyMsg": "Nenhum Categoria encontrada",
         "categoryError1": "Selecione pelo menos uma Categoria",
         "categoryError2": "Erro ao consultar categorias",
         "campaignPh": "Selecione uma campanha",
-        "campaignSearchPh": "Procure uma Campaña",
+        "campaignSearchPh": "Procure uma Campanha",
+        "campaignEmptyMsg": "Nenhum Campanha encontrada",
         "campaignError1": "Não há campanhas para o período, setores e categorias selecionados",
         "campaignError2": "Erro ao consultar campanhas",
+        "campaignError3": "Selecione uma Campanha",
         "sourcePh": "Selecione uma Fonte",
         "sourceError1": "Selecione pelo menos uma Fonte",
+        "genericEmptyMsg": "Nenhum resultado encontrado",
         "filter": "Filtro"
     },
     "overviewLatam": {
