--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -34,7 +34,7 @@
         "countryPh": "Selecciona un País",
         "countrySearchPh": "Buscar País",
         "countryEmptyMsg": "No se encontraron Países",
-        "countryError1": "Error al consultar países",
+        "countryError1": "Error al consultar Países",
         "retailerPh": "Selecciona un Retailer",
         "retailerSearchPh": "Buscar Retailer",
         "retailerEmptyMsg": "No se encontraron Retailers",
@@ -49,19 +49,33 @@
         "sectorPh": "Selecciona un Sector",
         "sectorEmptyMsg": "No se encontraron Sectores",
         "sectorError1": "Selecciona al menos un Sector",
-        "sectorError2": "Error al consultar sectores",
+        "sectorError2": "Error al consultar Sectores",
         "categoryPh": "Selecciona una Categoría",
         "categoryEmptyMsg": "No se encontraron Categorías",
         "categoryError1": "Selecciona al menos una Categoría",
-        "categoryError2": "Error al consultar categorías",
+        "categoryError2": "Error al consultar Categorías",
         "campaignPh": "Selecciona una Campaña",
         "campaignSearchPh": "Buscar Campaña",
         "campaignEmptyMsg": "No se encontraron Campañas",
-        "campaignError1": "No existen campañas para el Periodo, Sectores y Categorías seleccionados",
-        "campaignError2": "Error al consultar campañas",
+        "campaignError1": "No existen Campañas para el Periodo, Sectores y Categorías seleccionados",
+        "campaignError2": "Error al consultar Campañas",
         "campaignError3": "Selecciona una Campaña",
         "sourcePh": "Selecciona una Fuente",
         "sourceError1": "Selecciona al menos una Fuente",
+        "province": "Provincia",
+        "provincePh": "Selecciona una Provincia",
+        "provinceSearchPh": "Buscar Provincia",
+        "provinceEmptyMsg": "No se encontraron Provincias",
+        "provinceError1": "Selecciona al menos una Provincia o Ciudad",
+        "provinceError2": "Error al consultar Provincias",
+        "provinceError3": "No se encontraron Provincias para este Retailer",
+        "city": "Ciudad",
+        "cityPh": "Selecciona una Ciudad",
+        "citySearchPh": "Buscar Ciudad",
+        "cityEmptyMsg": "No se encontraron Ciudades",
+        "cityError1": "Error al consultar Ciudades",
+        "cityError2": "No se encontraron Ciudades para este Retailer",
+        "cityError3": " No se encontraron Provincias ni Ciudades para este Retailer",
         "genericEmptyMsg": "No se encontraron resultados",
         "filter": "Filtrar"
     },
