--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -34,7 +34,7 @@
         "countryPh": "Selecione um Pais",
         "countrySearchPh": "Procure um país",
         "countryEmptyMsg": "Nenhum país encontrado",
-        "countryError1": "Erro ao consultar países",
+        "countryError1": "Erro ao consultar Países",
         "retailerPh": "Selecione um Retailer",
         "retailerSearchPh": "Procure um Retailer",
         "retailerEmptyMsg": "Nenhum Retailer encontrado",
@@ -49,19 +49,33 @@
         "sectorPh": "Selecione um Setor",
         "sectorEmptyMsg": "Nenhum Setor encontrado",
         "sectorError1": "Selecione pelo menos um Setor",
-        "sectorError2": "Erro ao consultar setores",
+        "sectorError2": "Erro ao consultar Setores",
         "categoryPh": "Selecione uma Categoria",
         "categoryEmptyMsg": "Nenhum Categoria encontrada",
         "categoryError1": "Selecione pelo menos uma Categoria",
-        "categoryError2": "Erro ao consultar categorias",
-        "campaignPh": "Selecione uma campanha",
+        "categoryError2": "Erro ao consultar Categorias",
+        "campaignPh": "Selecione uma Campanha",
         "campaignSearchPh": "Procure uma Campanha",
         "campaignEmptyMsg": "Nenhum Campanha encontrada",
-        "campaignError1": "Não há campanhas para o período, setores e categorias selecionados",
-        "campaignError2": "Erro ao consultar campanhas",
+        "campaignError1": "Não há Campanhas para o período, setores e categorias selecionados",
+        "campaignError2": "Erro ao consultar Campanhas",
         "campaignError3": "Selecione uma Campanha",
         "sourcePh": "Selecione uma Fonte",
         "sourceError1": "Selecione pelo menos uma Fonte",
+        "province": "Província",
+        "provincePh": "Selecione uma Província",
+        "provinceSearchPh": "Procure uma Província",
+        "provinceEmptyMsg": "nenhuma Província encontrada",
+        "provinceError1": "Selecione pelo menos uma Província ou Cidade",
+        "provinceError2": "erro ao consultar as Províncias",
+        "provinceError3": "Nenhuma província encontrada para este Retailer",
+        "city": "Cidade",
+        "cityPh": "Selecione uma Cidade",
+        "citySearchPh": "Procure uma Cidade",
+        "cityEmptyMsg": "Nenhuma Cidade encontrada",
+        "cityError1": "Erro ao consultar Cidades",
+        "cityError2": "Nenhuma Cidade encontrada para este Retailer",
+        "cityError3": "Nenhuma Província ou Cidade encontrado para este Retailer",
         "genericEmptyMsg": "Nenhum resultado encontrado",
         "filter": "Filtro"
     },
