add i18n to google-business-wrapper component (#254)
* update i18n files

* add i18n references to google-business-filters component

* update i18n files

* add i18n references to google-business-wrapper component

* add unsusbcribe in campaign-towards-retail-wrapper component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,7 +34,7 @@
         "countryPh": "Select a Country",
         "countrySearchPh": "Search Country",
         "countryEmptyMsg": "No Countries found",
-        "countryError1": "Error when consulting countries",
+        "countryError1": "Error when consulting Countries",
         "retailerPh": "Select a Retailer",
         "retailerSearchPh": "Search Retailer",
         "retailerEmptyMsg": "No Retailers found",
@@ -46,22 +46,36 @@
         "periodPh2": "End date",
         "periodError1": "Invalid start date",
         "periodError2": "Invalid end date",
-        "sectorPh": "Select a sector",
+        "sectorPh": "Select a Sector",
         "sectorEmptyMsg": "No Sectors found",
         "sectorError1": "Select at least one Sector",
-        "sectorError2": "Error when consulting sectors",
+        "sectorError2": "Error when consulting Sectors",
         "categoryPh": "Select a Category",
         "categoryEmptyMsg": "No Categories found",
         "categoryError1": "Select at least one Category",
-        "categoryError2": "Error when consulting categories",
-        "campaignPh": "Select a campaign",
+        "categoryError2": "Error when consulting Categories",
+        "campaignPh": "Select a Campaign",
         "campaignSearchPh": "Search Campaign",
-        "campaignEmptyMsg": "No found Campaigns",
-        "campaignError1": "There aren't campaigns for the selected Period, Sectors and Categories",
-        "campaignError2": "Error when consulting campaigns",
+        "campaignEmptyMsg": "No Campaigns found",
+        "campaignError1": "There aren't Campaigns for the selected Period, Sectors and Categories",
+        "campaignError2": "Error when consulting Campaigns",
         "campaignError3": "Select a Campaign",
         "sourcePh": "Select a Source",
         "sourceError1": "Select at least one Source",
+        "province": "Province",
+        "provincePh": "Select a Province",
+        "provinceSearchPh": "Search Province",
+        "provinceEmptyMsg": "No Provinces found",
+        "provinceError1": "Select al least one Privince or City",
+        "provinceError2": "Error when consulting Provinces",
+        "provinceError3": "No Provinces found for this Retailer",
+        "city": "City",
+        "cityPh": "Select a City",
+        "citySearchPh": "Search City",
+        "cityEmptyMsg": "No Cities found",
+        "cityError1": "Error when consulting Cities",
+        "cityError2": "No Cities found for this Retailer",
+        "cityError3": "No Provinces or Cities found for this Retailer",
         "genericEmptyMsg": "No results found",
         "filter": "Filter"
     },
@@ -88,6 +102,12 @@
         "table1Error": "Error when consulting campaigns",
         "table1Empty": "No found campaigns",
         "campList1": "Google Search and MDF"
+    },
+    "googleBusiness": {
+        "province": "Province",
+        "city": "City",
+        "store": "Store",
+        "visits": "Visits"
     },
     "charts": {
         "byCountry": " by Country",
