--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -51,23 +51,21 @@
         "sectorError1": "Selecione pelo menos um Setor",
         "sectorError2": "Erro ao consultar Setores",
         "categoryPh": "Selecione uma Categoria",
-        "categoryEmptyMsg": "Nenhum Categoria encontrada",
+        "categoryEmptyMsg": "Nenhuma Categoria encontrada",
         "categoryError1": "Selecione pelo menos uma Categoria",
         "categoryError2": "Erro ao consultar Categorias",
         "campaignPh": "Selecione uma Campanha",
         "campaignSearchPh": "Procure uma Campanha",
-        "campaignEmptyMsg": "Nenhum Campanha encontrada",
+        "campaignEmptyMsg": "Nenhuma Campanha encontrada",
         "campaignError1": "Não há Campanhas para o período, setores e categorias selecionados",
         "campaignError2": "Erro ao consultar Campanhas",
         "campaignError3": "Selecione uma Campanha",
-        "sourcePh": "Selecione uma Fonte",
-        "sourceError1": "Selecione pelo menos uma Fonte",
         "province": "Província",
         "provincePh": "Selecione uma Província",
         "provinceSearchPh": "Procure uma Província",
-        "provinceEmptyMsg": "nenhuma Província encontrada",
+        "provinceEmptyMsg": "Nenhuma Província encontrada",
         "provinceError1": "Selecione pelo menos uma Província ou Cidade",
-        "provinceError2": "erro ao consultar as Províncias",
+        "provinceError2": "Erro ao consultar as Províncias",
         "provinceError3": "Nenhuma província encontrada para este Retailer",
         "city": "Cidade",
         "cityPh": "Selecione uma Cidade",
@@ -76,6 +74,24 @@
         "cityError1": "Erro ao consultar Cidades",
         "cityError2": "Nenhuma Cidade encontrada para este Retailer",
         "cityError3": "Nenhuma Província ou Cidade encontrado para este Retailer",
+        "source": "Fonte",
+        "sourcePh": "Selecione uma Fonte",
+        "sourceSearchPh": "Procure uma Fonte",
+        "sourceEmptyMsg": "Nenhuma Fonte encontrada",
+        "sourceError1": "Selecione pelo menos uma Fonte",
+        "sourceError2": "Erro ao consultar Fontes",
+        "sourceError3": "Selecione pelo menos uma Fonte ou Meio",
+        "medium": "Meio",
+        "mediumPh": "Selecione um Meio",
+        "mediumSearchPh": "Procure um Meio",
+        "mediumEmptyMsg": "Nenhum Meio encontrado",
+        "mediumError1": "Selecione pelo menos um Meio",
+        "mediumError2": "Erro ao consultar Meios",
+        "audience": "Público",
+        "audicencePh": "Selecione um Público",
+        "audienceSearchPh": "Procure um Público",
+        "audienceEmptyMsg": "Nenhum Público encontrado",
+        "audienceError1": "Selecione pelo menos um Público",
         "genericEmptyMsg": "Nenhum resultado encontrado",
         "filter": "Filtro"
     },
@@ -98,10 +114,22 @@
         "chart1Legend1": "Ativas",
         "chart1Legend2": "Inativas"
     },
+    "retailer": {
+        "campTowardsRetail": "Campanhas direcionadas para o varejo (retail)",
+        "campInRetail": "Campanhas no varejo (retail)"
+    },
     "campTowardsRetail": {
         "table1Error": "Erro ao consultar campanhas",
         "table1Empty": "Nenhum campanha encontrada",
         "campList1": "Google Search e MDF"
+    },
+    "campInRetail": {
+        "cards1Title": "ROAS por Setor",
+        "cards2Title": "Taxa de conversão por Setor",
+        "panel1Title": "Públicos",
+        "panel2Title": "Aquisição",
+        "panel3Title": "Comportamento",
+        "panel4Title": "Conversão"
     },
     "googleBusiness": {
         "province": "Província",
