include 'on site' as sector in heatmap buttons in overview-wrapper component (#261)
* update i18n files

* update overview-wrapper component

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -110,7 +110,8 @@
         "chart1CardTitle1": "Categorías por Retailer - Search",
         "chart1CardTitle2": "Categorías por Retailer - Marketing",
         "chart1CardTitle3": "Categorías por Retailer - Ventas",
-        "chart1CardTitle4": "Categorías por Sector",
+        "chart1CardTitle4": "Categorías por Retailer - On Site",
+        "chart1CardTitle5": "Categorías por Sector",
         "chart1Legend1": "Activas",
         "chart1Legend2": "Inactivas"
     },
