--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -110,7 +110,8 @@
         "chart1CardTitle1": "Categorias por Retailer - Search",
         "chart1CardTitle2": "Categorias por Retailer - Marketing",
         "chart1CardTitle3": "Categorias por Retailer - Vendas",
-        "chart1CardTitle4": "Categorias por Setor",
+        "chart1CardTitle4": "Categorias por Retailer - On Site",
+        "chart1CardTitle5": "Categorias por Setor",
         "chart1Legend1": "Ativas",
         "chart1Legend2": "Inativas"
     },
