--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -110,7 +110,8 @@
         "chart1CardTitle1": "Categories by Retailer - Search",
         "chart1CardTitle2": "Categories by Retailer - Marketing",
         "chart1CardTitle3": "Categories by Retailer - Sales",
-        "chart1CardTitle4": "Categories by Sector",
+        "chart1CardTitle4": "Categories by Retailer - On Site",
+        "chart1CardTitle5": "Categories by Sector",
         "chart1Legend1": "Active",
         "chart1Legend2": "Inactive"
     },
