--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -200,7 +200,7 @@
         "conversions": "Conversions",
         "sales": "Sales",
         "users": "Users",
-        "new_users": "New users",
+        "newUsers": "New users",
         "sessions": "Sessions",
         "investment": "Investment",
         "ranking": "Ranking",
@@ -212,6 +212,7 @@
         "impressions": "Impressions",
         "clicks": "Clicks",
         "name": "Name",
+        "origin": "Origin",
         "pageViews": "Page views",
         "pagesBySessions": "Pages per session",
         "bounceRate": "Bounce rate",
@@ -222,6 +223,7 @@
         "usersVsSales": "Users - Conversions",
         "investmentVsRevenue": "Investment - Revenue",
         "revenueVsAup": "Revenue - AUP",
+        "amountVsAup": "Amount - AUP",
         "errorData": "Error getting data",
         "withoutData": "No data available",
         "withoutData2": "Insufficient sample",
