--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -200,7 +200,7 @@
         "conversions": "Conversiones",
         "sales": "Ventas",
         "users": "Usuarios",
-        "new_users": "Nuevos usuarios",
+        "newUsers": "Nuevos usuarios",
         "sessions": "Sesiones",
         "investment": "Inversión",
         "ranking": "Ranking",
@@ -212,6 +212,7 @@
         "impressions": "Impresiones",
         "clicks": "Clicks",
         "name": "Nombre",
+        "origin": "Origen",
         "pageViews": "Páginas vistas",
         "pagesBySessions": "Páginas por sesión",
         "bounceRate": "Porcentaje de rebote",
@@ -222,6 +223,7 @@
         "usersVsSales": "Usuarios - Conversiones",
         "investmentVsRevenue": "Inversión - Revenue",
         "revenueVsAup": "Revenue - AUP",
+        "amountVsAup": "Cantidad - AUP",
         "errorData": "Error al consultar datos",
         "withoutData": "Sin datos disponibles",
         "withoutData2": "Muestra insuficiente",
