--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -200,11 +200,11 @@
         "conversions": "Conversões",
         "sales": "Vendas",
         "users": "Usuários",
-        "new_users": "Novos usuários",
+        "newUsers": "Novos usuários",
         "sessions": "Sessões",
         "investment": "Investimento",
         "ranking": "Ranking",
-        "product": "Produtos",
+        "product": "Produto",
         "amount": "Quantidade",
         "fund": "Fundo",
         "institutional": "Institucional",
@@ -212,16 +212,18 @@
         "impressions": "Impressões",
         "clicks": "Clicks",
         "name": "Nome",
+        "origin": "Fonte",
         "pageViews": "Número de visualizações de página",
         "pagesBySessions": "Páginas por sessão",
         "bounceRate": "Taxa de Rejeição",
         "sessionDuration": "Duração média da sessão",
-        "productIncomes": "Receita do Produto",
+        "productIncomes": "Revenue de Produto",
         "newVisitors": "Novos usuários",
         "recurringVisitors": "Visitantes recorrentes",
         "usersVsSales": "Usuários - Conversões",
         "investmentVsRevenue": "Investimento - Revenue",
         "revenueVsAup": "Revenue - AUP",
+        "amountVsAup": "Quantidade - AUP",
         "errorData": "Erro ao consultar dados",
         "withoutData": "Nenhum dado disponível",
         "withoutData2": "Amostra insuficiente",
