add i18n to pc-selector-wrapper component (#266)
* update i18n files

* add i18n references to pc-selector-wrapper component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -185,6 +185,20 @@
         "chatScore": "chat score",
         "chatResult": "result"
     },
+    "pcSelector": {
+        "section1Title1": "Traffic and Conversions",
+        "chart4CardTitle1": "Leaves rate",
+        "chart5CardTitle1": "Virtual Assistant Usage Rate",
+        "chart6CardTitle1": "Leaves rate per question",
+        "chart7CardTitle1": "Conversions by product",
+        "chart8CardTitle1": "Users, Conversions and Conversion rate by date",
+        "leave": "Leaves",
+        "dontLeave": "Doesn't leave",
+        "use": "Uses",
+        "dontUse": "Doesn't use",
+        "question": "Question",
+        "finish": "Ends the process"
+    },
     "charts": {
         "byCountry": " by Country",
         "byRetailer": " by Retailer",
