fix typo in es.json file

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -246,7 +246,7 @@
         "investment": "Inversión",
         "ranking": "Ranking",
         "product": "Producto",
-        "amount": "Catindad",
+        "amount": "Cantidad",
         "fund": "Fondo",
         "institutional": "Institucional",
         "others": "Otros",
