--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -291,6 +291,7 @@
         "men": "Hombres",
         "women": "Mujeres",
         "years": "años",
+        "total": "total",
         "multSelection": "Ctrl + click para selección múltiple",
         "days": {
             "mon": "Lun",
