--- a/src/assets/i18n/pt.json
+++ b/src/assets/i18n/pt.json
@@ -291,6 +291,7 @@
         "men": "Homens",
         "women": "Mulheres",
         "years": "anos",
+        "total": "total",
         "multSelection": "Ctrl + click para seleção múltipla",
         "days": {
             "mon": "Seg",
